--- a/app/src/main/res/layout-sw600dp/movies_list_main_view.xml
+++ b/app/src/main/res/layout-sw600dp/movies_list_main_view.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/viewSwitcher"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:weightSum="3">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvMovies"
@@ -22,5 +24,12 @@
             android:visibility="visible" />
     </RelativeLayout>
 
-    <include layout="@layout/movie_details_main_view" />
-</ViewSwitcher>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2">
+
+        <include layout="@layout/movie_details_main_view" />
+
+    </LinearLayout>
+</LinearLayout>
